ViewModel added : random view model

--- a/MovieRentalAppMVC/Views/Movies/Random.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Random.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieRentalAppMVC.Models.Movie
+﻿@model MovieRentalAppMVC.ViewModels.RandomMovieViewModel
 
 @{
     ViewBag.Title = "Random";
@@ -7,5 +7,6 @@
 
 <h2>Random View</h2>
 
-<h4>@Model.Name</h4>
+<h4>@Model.Movie.Name</h4>
+
 
