--- a/MovieRentalAppMVC/Views/Customers/Details.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/Details.cshtml
@@ -5,8 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>@Model.Name</h2>
 
-@Model.Name
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+
+    @if (Model.BirthDate.HasValue)
+    {
+        <li>Date of Birth: @Model.BirthDate.Value.ToShortDateString()</li>
+    }
+    
+
+
+</ul>
+
+
+
 
 
