--- a/MovieRentalAppMVC/Views/Movies/Details.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Details.cshtml
@@ -5,7 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>@Model.Name</h2>
 
-@Model.Name
+<ul>
+    <li>Genre: @Model.Genre.Name</li>
+    <li>Relese Date: @Model.ReleaseDate.ToLongDateString()</li>
+    <li>Date Added: @Model.DateAdded.ToLongDateString()</li>
+    <li>Number in Stock: @Model.NumberInStock</li>
+
+   
+
+
+
+</ul>
+
 
