--- a/MovieRentalAppMVC/Views/Movies/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Index.cshtml
@@ -16,18 +16,16 @@ else
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>
-                    Movies
-                </th>
+                <th>Movies</th>
+                <th>Genre</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>
-                        @Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)
-                    </td>
+                    <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+                    <td>@movie.Genre.Name</td>
                 </tr>
             }
         </tbody>
