--- a/MovieRentalAppMVC/Views/Customers/New.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/New.cshtml
@@ -29,7 +29,8 @@
             @Html.CheckBoxFor(c => c.Customer.IsSubscribedToNewsletter) Subscribed to Newsletter?
         </label>
     </div>
-
+    
+    <div type="submit" class=" btn btn-primary">Save</div>
 
 
 
