--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieRentalAppMVC.ViewModels.NewCustomerViewModel
+﻿@model MovieRentalAppMVC.ViewModels.CustomerFormViewModel
 
 @{
     ViewBag.Title = "New";
@@ -16,7 +16,7 @@
 
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.BirthDate)
-        @Html.TextBoxFor(c => c.Customer.BirthDate, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
     </div>
 
     <div class="form-group">
