Updated pages: about, contact. Added +New Customer button/link Added dinamic name of the Edit/New view page

--- a/MovieRentalAppMVC/Views/Customers/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/Index.cshtml
@@ -7,6 +7,9 @@
 
 <h2>Customers</h2>
 
+@Html.ActionLink("+ Add Customer", "New", "Customer", new { @class = "btn btn-primary"})
+<p></p>
+
 @if (!Model.Any())
 {
     <p>We don't have any Customer yet.</p>
