--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This application is a Movie Rental Application created as a part of my training in ASP.NET MVC and EntityFramework.</p>
+<p>Additionally, while working on this project I have used some bootstrap, postman, sql, some HTML, JavaScript, JQuery and Ajax.</p>
+    
