--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -5,7 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>New Customer</h2>
+@if (Model.Customer==null )
+{
+    <h2>New Customer</h2>
+}
+else
+{
+    <h2>Edit Customer</h2>  
+}
+
+
 
 @using (Html.BeginForm("Save", "Customers"))
 {
@@ -29,7 +38,7 @@
             @Html.CheckBoxFor(c => c.Customer.IsSubscribedToNewsletter) Subscribed to Newsletter?
         </label>
     </div>
-    
+
     @Html.HiddenFor(c => c.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 
