--- a/MovieRentalAppMVC/Views/Home/Contact.cshtml
+++ b/MovieRentalAppMVC/Views/Home/Contact.cshtml
@@ -1,17 +1,27 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>LinkedIn:</strong>   <a href="https://www.linkedin.com/in/jaros%C5%82aw-nowakowski-4a292a4/">www.linkedin.com/in/jaros%C5%82aw-nowakowski-4a292a4/</a><br />
+    <p></p>
+    <strong>GitHub:</strong> <a href="https://github.com/elYaro">www.github.com/elYaro</a>
+
 </address>
+
+
+@*<address>
+        One Microsoft Way<br />
+        Redmond, WA 98052-6399<br />
+        <abbr title="Phone">P:</abbr>
+        425.555.0100
+    </address>
+
+    <address>
+        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    </address>
+*@
