--- a/MovieRentalAppMVC/Views/Movies/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Index.cshtml
@@ -7,6 +7,9 @@
 
 <h2>Movies</h2>
 
+@Html.ActionLink("+ Add Movie", "Index", "Movies", new {@class = "btn btn-primary"})
+<p></p>
+
 @if (!Model.Any())
 {
     <p>We don't have any Movies in our store yet.</p>
@@ -24,7 +27,7 @@ else
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
                 </tr>
             }
