--- a/MovieRentalAppMVC/Views/Movies/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Movies</h2>
 
-@Html.ActionLink("+ Add Movie", "Index", "Movies", new {@class = "btn btn-primary"})
+@Html.ActionLink("+ Add Movie", "New", "Movies", new {@class = "btn btn-primary"})
 <p></p>
 
 @if (!Model.Any())
