--- a/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
@@ -7,7 +7,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MovieForm</h2>
+
+@if (Model.Movie == null)
+{
+    <h2>New Movie</h2>
+}
+else
+{
+    <h2>Edit Movie</h2>
+}
+
 
 @using (Html.BeginForm("Save", "Movies"))
 {
@@ -32,6 +41,8 @@
         @Html.LabelFor(m => m.Movie.NumberInStock)
         @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
     </div>
+
+    <button class="btn btn-primary">Save</button>
 
     @*<div class="form-group">
             @Html.LabelFor(m => m.Movie.GenreId)
