--- a/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
@@ -42,13 +42,16 @@ else
         @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
     </div>
 
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Movie.GenreId)
+        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "SelectList Genre", new { @class = "form-control" })
+    </div>
+
     <button class="btn btn-primary">Save</button>
 
-    @*<div class="form-group">
-            @Html.LabelFor(m => m.Movie.GenreId)
-            @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "SelectList Genre", new { @class = "form-control" })
-        </div>
-    *@
+
+
 
 }
 
