Add validation in customer form using ModelState.IsValid and Html.ValidationMessageFor

--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -21,6 +21,7 @@ else
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.Name)
         @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c =>c.Customer.Name)
     </div>
 
     <div class="form-group">
