--- a/MovieRentalAppMVC/Content/Site.css
+++ b/MovieRentalAppMVC/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+/* Add my custom style*/
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 2px solid red;
+}
