--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -32,6 +32,7 @@ else
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.MembershipTypeId)
         @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select membership type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
     </div>
 
     <div class="checkbox">
