--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -27,6 +27,7 @@ else
     <div class="form-group">
         @Html.LabelFor(c => c.Customer.BirthDate)
         @Html.TextBoxFor(c => c.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.BirthDate)
     </div>
 
     <div class="form-group">
