--- a/MovieRentalAppMVC/Content/Site.css
+++ b/MovieRentalAppMVC/Content/Site.css
@@ -23,7 +23,7 @@ textarea {
     max-width: 280px;
 }
 /* Add my custom style*/
-.field-validation-error {
+.field-validation-error, .validation-summary-errors {
     color: red;
 }
 
