--- a/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/CustomerForm.cshtml
@@ -46,6 +46,9 @@ else
     </div>
 
     @Html.HiddenFor(c => c.Customer.Id)
+    @Html.AntiForgeryToken()
+
+
     <button type="submit" class="btn btn-primary">Save</button>
 
 
