--- a/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/MovieForm.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-@if (Model.Movie == null)
+@if (Model.Id == 0)
 {
     <h2>New Movie</h2>
 }
@@ -20,15 +20,21 @@ else
 
 @using (Html.BeginForm("Save", "Movies"))
 {
+
+    @Html.ValidationSummary()
+    //@Html.ValidationSummary(true, "Please correct following fields")
+    
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Name)
-        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.LabelFor(m => m.ReleaseDate)
+        @Html.TextBoxFor(m => m.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
 
 
@@ -41,19 +47,21 @@ else
 
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.GenreId)
-        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "SelectList Genre", new { @class = "form-control" })
+        @Html.LabelFor(m => m.GenreId)
+        @Html.DropDownListFor(m => m.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Genre", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.GenreId)
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.NumberInStock)
-        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NumberInStock)
+        @Html.TextBoxFor(m => m.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NumberInStock)
     </div>
 
 
-    @Html.HiddenFor(m => m.Movie.Id)
-
+    @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 
 
@@ -61,4 +69,7 @@ else
 
 }
 
-
+@section scripts
+    {
+    @Scripts.Render("~/bundles/jqueryval")
+}
