Added text to About page

--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -5,5 +5,16 @@
 <h3>@ViewBag.Message</h3>
 
 <p>This application is a Movie Rental Application created as a part of my training in ASP.NET MVC and EntityFramework.</p>
-<p>Additionally, while working on this project I have used some bootstrap, postman, sql, some HTML, JavaScript, JQuery and Ajax.</p>
-    
+<p>While working on this project I have used the following frameworks and tools:</p>
+<ul>
+    <li>ASP.NET MVC</li>
+    <li>ASP.NET Web API</li>
+    <li>Bootstrap</li>
+    <li>Postman</li>
+    <li>SQL</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JQuery</li>
+    <li>JQuery plug-in: DataTable for pagination, sorting and searchong</li>
+    <li>Ajax</li>
+</ul>
