Add API for Customer

--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -15,6 +15,6 @@
     <li>HTML</li>
     <li>CSS</li>
     <li>JQuery</li>
-    <li>JQuery plug-in: DataTable for pagination, sorting and searchong</li>
+    <li>JQuery plug-in: DataTable for pagination, sorting and searching</li>
     <li>Ajax</li>
 </ul>
