installed AutoMapper v:4.1 Add MappingProfile Customer Controller refactor to use Dtos objects

--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -11,6 +11,7 @@
     <li>ASP.NET Web API</li>
     <li>Bootstrap</li>
     <li>Postman</li>
+    <li>AutoMapper version:4.1</li>
     <li>SQL</li>
     <li>HTML</li>
     <li>CSS</li>
@@ -18,3 +19,4 @@
     <li>JQuery plug-in: DataTable for pagination, sorting and searching</li>
     <li>Ajax</li>
 </ul>
+  
