--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -10,6 +10,7 @@
     <li>ASP.NET MVC</li>
     <li>ASP.NET Web API</li>
     <li>Bootstrap</li>
+    <li>Bootbox.js (v:4.3.0)</li>
     <li>Postman</li>
     <li>AutoMapper version:4.1</li>
     <li>SQL</li>
