--- a/MovieRentalAppMVC/Views/Customers/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/Index.cshtml
@@ -107,7 +107,7 @@ else
 {
     <script>
         $(document).ready(function () {
-            $("#customersTable .js-delete").on("click", function () {
+            $("#customersTable").on("click", ".js-delete", function () {
                 var button = $(this);
 
 
