--- a/MovieRentalAppMVC/Views/Customers/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/Index.cshtml
@@ -124,7 +124,7 @@ else
                         }
                     },
                     {
-                        data: "name"
+                        data: "membershipType.name"
                     },
                     {
                         data: "id",
