DataTable removing record from DataTable list and not only from the DOME (in another words not only removing <tr> from the table)

--- a/MovieRentalAppMVC/Views/Customers/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Customers/Index.cshtml
@@ -11,23 +11,23 @@
 <p></p>
 
 @*
-@if (!Model.Any())
-{
-    <p>We don't have any Customer yet.</p>
-}
-else
-{
+    @if (!Model.Any())
+    {
+        <p>We don't have any Customer yet.</p>
+    }
+    else
+    {
 *@
-    <table id="customersTable" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Membership Type</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @*
+<table id="customersTable" class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Customer</th>
+            <th>Membership Type</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @*
             @foreach (var customer in Model)
             {
                 <tr>
@@ -38,10 +38,66 @@ else
                     </td>
                 </tr>
             }
-            *@
-        </tbody>
-    </table>
+        *@
+    </tbody>
+</table>
 @*}*@
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#customersTable").DataTable({
+                ajax: {
+                    url: "/api/customers/",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href = '/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "membershipType.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class = 'btn-link js-delete' data-customer-id =" + data + ">Delete</button>";
+                        }
+
+
+                    }
+
+                ]
+            });
+
+
+            $("#customersTable").on("click", ".js-delete", function () {
+                var button = $(this);
+
+
+                bootbox.confirm("Are you sure?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/customers/" + button.attr("data-customer-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                                //button.parents("tr").remove();
+                            }
+                        });
+                    }
+                })
+
+            });
+        });
+    </script>
+}
+
+
 
 @*Using JQuery and Ajax on the client side to delete row from the table*@
 
@@ -104,59 +160,9 @@ else
 
 
     ****** STEEP 5 ******
+    LOOK ABOVE PLS :)
 
 *@
 
-@section scripts
-{
-    <script>
-        $(document).ready(function () {
-            $("#customersTable").DataTable({
-                ajax : {
-                    url: "/api/customers/",
-                    dataSrc: ""
-                },
-                columns: [
-                    {
-                        data: "name",
-                        render: function (data, type, customer) {
-                            return "<a href = '/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
-                        }
-                    },
-                    {
-                        data: "membershipType.name"
-                    },
-                    {
-                        data: "id",
-                        render: function (data) {
-                            return "<button class = 'btn-link js-delete' data-customer-id =" + data + ">Delete</button>";
-                        }
-                        
 
-                    }
-                    
-                ]
-            });
-
-
-            $("#customersTable").on("click", ".js-delete", function () {
-                var button = $(this);
-
-
-                bootbox.confirm("Are you sure?", function (result) {
-                    if (result) {
-                        $.ajax({
-                            url: "/api/customers/" + button.attr("data-customer-id"),
-                            method: "DELETE",
-                            success: function () {
-                                button.parents("tr").remove();
-                            }
-                        });
-                    }
-                })
-                  
-            });
-        });
-    </script>
-}
 
