--- a/MovieRentalAppMVC/Views/Movies/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Index.cshtml
@@ -7,30 +7,91 @@
 
 <h2>Movies</h2>
 
-@Html.ActionLink("+ Add Movie", "New", "Movies", new {@class = "btn btn-primary"})
+@Html.ActionLink("+ Add Movie", "New", "Movies", new { @class = "btn btn-primary" })
 <p></p>
-
-@if (!Model.Any())
-{
-    <p>We don't have any Movies in our store yet.</p>
-}
-else
-{
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Movies</th>
-                <th>Genre</th>
-            </tr>
-        </thead>
-        <tbody>
+@*
+    @if (!Model.Any())
+    {
+        <p>We don't have any Movies in our store yet.</p>
+    }
+    else
+    {
+*@
+<table id="moviesTable" class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Movies</th>
+            <th>Genre</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @*
             @foreach (var movie in Model)
             {
                 <tr>
                     <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
+                    <td>
+                        <button data-movie-id="@movie.Id "class="btn-link js-delete">Delete</button>
+                    </td>
                 </tr>
             }
-        </tbody>
-    </table>
+        *@
+
+    </tbody>
+</table>
+@*}*@
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#moviesTable").DataTable({
+                ajax: {
+                    url: "/api/movies/",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+
+                    },
+                    {
+                        data: "name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class = 'btn-link js-delete' data-movie-id =" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
+
+
+
+            $("#moviesTable").on("click", ".js-delete", function () {
+                var button = $(this);
+
+                bootbox.confirm("Are you sure?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                                //button.parents("tr").remove();
+                            }
+                        });
+                    }
+                })
+
+
+            });
+        });
+    </script>
 }
