returning genre type to movies view, add genreDto (returning hierarchical data)

--- a/MovieRentalAppMVC/Views/Movies/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/Index.cshtml
@@ -61,7 +61,7 @@
 
                     },
                     {
-                        data: "name"
+                        data: "genre.name"
                     },
                     {
                         data: "id",
