--- a/MovieRentalAppMVC/Views/Movies/ReadOnlyIndex.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/ReadOnlyIndex.cshtml
@@ -36,7 +36,7 @@
                         data: "name",
                     },
                     {
-                        data: "name"
+                        data: "genre.name"
                     },
                     
                 ]
