Add <a href> to movie readOnlyIndex to see the details of selected movie

--- a/MovieRentalAppMVC/Views/Movies/ReadOnlyIndex.cshtml
+++ b/MovieRentalAppMVC/Views/Movies/ReadOnlyIndex.cshtml
@@ -34,6 +34,15 @@
                 columns: [
                     {
                         data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/details/" + movie.id + "'>" + data + "</a>";
+                        }
+
+                         
+
+
+
+
                     },
                     {
                         data: "genre.name"
