--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
     <li>ASP.NET Web API</li>
     <li>Postman</li>
     <li>AutoMapper version:4.1</li>
-    <li>SQL</li>
+    <li>SQL -> using Eager Loading (faster, geting bunch of objects together (inner join) in one querry)  not Lazy Loading (slower, geting one after one object in many querries)</li>
     <li>HTML</li>
     <li>CSS</li>
     <li>JQuery</li>
@@ -19,6 +19,7 @@
     <li>Bootstrap</li>
     <li>Bootbox.js (v:4.3.0)</li>
     <li>JQuery plug-in: DataTable (v:1.10.11) for pagination, sorting and searching</li>
+    <li>Glimpse (glimpse.mvc5 and glimpse.ef6) a tool for getting real time diagnostics  </li>
 
 
 </ul>
