--- a/MovieRentalAppMVC/Views/Home/Index.cshtml
+++ b/MovieRentalAppMVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    @*here the actual DateTime was added to present how the Output Cash works, which is for cashinf the rendered htlm
+    @*here the actual DateTime was added to present how the Output Cache works, which is for cacheing the rendered htlm
         <h1>ASP.NET @DateTime.Now.ToString()</h1>*@
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
