--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -21,6 +21,6 @@
     <li>JQuery plug-in: DataTable (v:1.10.11) for pagination, sorting and searching</li>
     <li>Glimpse (glimpse.mvc5 and glimpse.ef6) a tool for getting real time diagnostics  </li>
     <li>ZenCoding plug-in: a quick way to generate HTML markup by using a CSS based syntax </li>
-
+    <li>JQuery plug-in: Typeahead developed by Twitter Team</li>
 </ul>
   
