--- a/MovieRentalAppMVC/Views/Rentals/New.cshtml
+++ b/MovieRentalAppMVC/Views/Rentals/New.cshtml
@@ -27,16 +27,28 @@
 <form>
     <div class="form-group">
         <label>Customer</label>
-        <input id="customer" type="text" value="" class="form-control" />
+        <div class="tt-container"> @*this additional div is to move input field in the next line in view*@
+            <input id="customer" type="text" value="" class="form-control" />
+        </div>
+        
     </div>
 
     <div class="form-group">
         <label>Movie</label>
-        <input id="movie" type="text" value="" class="form-control" />
+        <div class="tt-container">
+            @*this additional div is to move input field in the next line in view*@
+            <input id="movie" type="text" value="" class="form-control" />
+        </div>
+        
     </div>
 
-    <ul id="movies" class="list-group"></ul>
 
+    <div class="row">
+        <div class="col-md-4 col-sm-4"> @*using another bootstram class to make the list dicplay not on entire width of the screen*@
+            <ul id="movies" class="list-group"></ul> 
+        </div>
+    </div>
+    
     <button class="btn btn-primary">Submit</button>
 </form>
 
@@ -89,7 +101,7 @@
                     display: 'name',
                     source: movies
                 }).on("typeahead:select", function (e, movie) {
-                    $("#movies").append("<li>" + movie.name + "</li>");
+                    $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
 
                     $("#movie").typeahead("val", "");
 
