add toastr.js plug-in, add bundles, add pop-up box in new rental view

--- a/MovieRentalAppMVC/Views/Home/About.cshtml
+++ b/MovieRentalAppMVC/Views/Home/About.cshtml
@@ -18,9 +18,10 @@
     <li>Ajax</li>
     <li>Bootstrap</li>
     <li>Bootbox.js (v:4.3.0)</li>
-    <li>JQuery plug-in: DataTable (v:1.10.11) for pagination, sorting and searching</li>
     <li>Glimpse (glimpse.mvc5 and glimpse.ef6) a tool for getting real time diagnostics  </li>
-    <li>ZenCoding plug-in: a quick way to generate HTML markup by using a CSS based syntax </li>
+    <li>JQuery plug-in: DataTable (v:1.10.11) for pagination, sorting and searching</li>
+    <li>JQuery plug-in: Toaster.js for a good looking pop-up confirmation box</li>
     <li>JQuery plug-in: Typeahead developed by Twitter Team</li>
+    <li>ZenCoding plug-in: a quick way to generate HTML markup by using a CSS based syntax </li>
 </ul>
   
