--- a/MovieRentalAppMVC/Views/Rentals/New.cshtml
+++ b/MovieRentalAppMVC/Views/Rentals/New.cshtml
@@ -116,10 +116,10 @@
                     data: viewModelOnClient
                 })
                     .done(function () {
-                        console.log("done");
+                        toastr.success("Rentals successfully recorded.");
                     })
                     .fail(function () {
-
+                        toastr.error("Something unexpected happened.")
                     });
             });
 
