--- a/MovieRentalAppMVC/Content/Site.css
+++ b/MovieRentalAppMVC/Content/Site.css
@@ -23,10 +23,13 @@ textarea {
     max-width: 280px;
 }
 /* Add my custom style*/
-.field-validation-error, .validation-summary-errors {
+.field-validation-error, 
+.validation-summary-errors,
+label.error{
     color: red;
 }
 
-.input-validation-error {
+.input-validation-error,
+input.error{
     border: 2px solid red;
 }
